Cria endpoints de fechamento de caixa
